# SnakeGame

./: .gitignore  CMakeLists.txt  index.html  index.js  index.wasm  main.cpp  makefile  playgame.cpp  playgame.ixx  square.cpp  square.ixx  states.ixx  test.cpp
.devcontainer/: Dockerfile  devcontainer.json
src/: game.cpp  game.h  gameover.cpp  gameover.h  main.cpp  pause.cpp  pause.h  playgame.cpp  playgame.h  rand.cpp  rand.h  screen.h  square.cpp  square.h  states.cpp
